css changes, new about section addded

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>Icon.svg">
     <link href="fontawesome-free-6.2.0-web/css/all.css" rel="stylesheet">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>NMIT Hacks 2023</title>
     <style>
       body{
         margin: 0px;
