--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="application-name" content="NMIT Hacks 2023">
     <link rel="icon" href="<%= BASE_URL %>Icon.svg">
     <link href="fontawesome-free-6.2.0-web/css/all.css" rel="stylesheet">
     <title>NMIT Hacks 2023</title>
