--- a/public/index.html
+++ b/public/index.html
@@ -40,5 +40,7 @@
     <script defer async src="https://apply.devfolio.co/v2/sdk.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vuetify@3.1.14/dist/vuetify.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
   </body>
 </html>
